refactoring authController